--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
   },
   "scripts": {
     "ci": "npm run test && npm run lint",
-    "test": "mocha --reporter spec --ui tdd test/tests/*",
-    "lint": "jshint lib/ test/tests/*.js test/util/*.js",
+    "test": "mocha --reporter spec --ui tdd test/*",
+    "lint": "jshint lib/ test/*.js",
     "doc": "jsdoc -r -d docs/ lib/"
   },
   "devDependencies": {
     "jshint": "~2.4.1",
     "mocha": "~1.17.0",
     "chai": "~1.8.1",
-    "jsdoc": "~3.3.0-alpha4"
+    "jsdoc": "~3.3.0-alpha4",
+    "alameda": "~0.2.0"
   }
 }
