--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chai": "~1.8.1",
     "jsdoc": "~3.3.0-alpha4",
     "alameda": "~0.2.0",
-    "amdefine": "~0.1.0"
+    "amdefine": "~0.1.0",
+    "web-audio-api": "~0.1.5"
   }
 }
